# git-test

./: .gitignore  Cargo.toml  README.md  init.sh
.github/workflows/: rust.yml
migrations/: init.up.sql
src/: main.rs  test.rs  types.rs
src/get/: get_all.rs
