[package]
name = "git-test"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.7.0"
rocket = { version = "0.5.1", features = ["json"] }
serde_json = { version = "1.0.1", features = ["preserve_order"] }
url = "2.5.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0"
