[package]
name = "git-test"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.7.0"
rocket = { version = "0.5.1", features = ["json"] }
serde_json = { version = "1.0.1", features = ["preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0"
sqlx = { version = "=0.8.1", features = ["sqlite", "runtime-tokio"] }
rusqlite = "=0.32.1"
